--- a/actRath.html
+++ b/actRath.html
@@ -120,13 +120,13 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum Rifle & Pistol Club</b></p>
-						<p class="card-text">Rathdrum Rifle & Pistol Club, Rathdrum, Co. Wicklow, A67 CH26</p>
+						<p class="card-text">Rathdrum Rifle & Pistol Club, Brewery Lane, Rathdrum, Co. Wicklow, A67 CH26</p>
 					</div>
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum Trout Anglers</b></p>
-						<p class="card-text"><i>Rathdrum Rifle & Pistol Club, Rathdrum, Co. Wicklow, A67 CH26</i></p>
+						<p class="card-text"><i>Rathdrum Rifle & Pistol Club, Brewery Lane, Rathdrum, Co. Wicklow, A67 CH26</i></p>
 						<a href="https://www.onthewater.ie/club/rathdrumtroutanglers" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/rathdrum.troutanglers/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
