--- a/dirRath.html
+++ b/dirRath.html
@@ -268,16 +268,6 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Bates Nua Restaurant</b></p>
-						<p class="card-text">3 Market Street, Rathdrum, Co. Wicklow, A67 AK15</p>
-						<p class="card-text"><a href="tel:+35340443635" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43635</p>
-						<p class="card-text"><a href="mailto:batesrestaurantrathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: batesrestaurantrathdrum@gmail.com</p>
-						<a href="https://www.facebook.com/batesnuarestaurant" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.instagram.com/bates_nua_restaurant_rathdrum" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
-					</div>
-				</div> 
-				<div class="card bg-dark text-white">
-					<div class="card-body">
 						<p class="card-text"><b>Jacob's Well Hotel</b><br><i>(Bar, Lounge &#38; Food)</i></p>
 						<p class="card-text">Main Street, Rathdrum, Co. Wiclow, A67 HD39</p>
 						<p class="card-text"><a href="tel:+35340446282" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 46282</p>
@@ -286,9 +276,6 @@
 						<a href="https://www.instagram.com/jacobs_well_rathdrum" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;
 					</div>
 				</div>
-			</div>  <!-- End card deck x 3 -->
-			
-			<div class="card-deck" style="padding: 0.5rem;">  
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>The Parnell</b><br><i>(Bar &#38; Lounge)</i></p>
@@ -298,6 +285,9 @@
 						<a href="https://www.instagram.com/the_parnell_rathdrum" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;
 					</div>
 				</div>
+			</div>  <!-- End card deck x 3 -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">  
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Cartoon Inn</b><br><i>(Bar &#38; Lounge)</i></p>
@@ -308,23 +298,23 @@
 				</div>		
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>The Coffin Shed Café</b></p>
+						<p class="card-text"><b>The Coffin Shed Café</b><br><i>(Cafe &#38; Catering)</i></p>
 						<p class="card-text">Market Street, Rathdrum, Co. Wicklow, A67 Y293</p>
 						<p class="card-text"><a href="tel:+353871961280" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 196 1280</p>
 						<a href="https://www.facebook.com/p/The-Coffin-Shed-Caf%C3%A9-100076444771456/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-			</div><!-- End card deck x 3 -->    
-	
-			<div class="card-deck" style="padding: 0.5rem;">
-				<div class="card bg-dark text-white">
+					<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>N11@Avondale</b><br><i>(Bar &#38; Restaurant)</i></p>
 						<p class="card-text">Back Lane, Rathdrum, Co. Wicklow, A67 A0F1</p>
 						<p class="card-text"><a href="tel:+353858309500" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 085 830 9500</p>
 						<a href="https://www.facebook.com/profile.php?id=61577735833612" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>	
+				</div>
+			</div><!-- End card deck x 3 -->    
+	
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Hidden Valley Resort</b><br><i>(Lakehouse Restaurant)</i></p>
@@ -346,18 +336,18 @@
 						<a href="https://www.facebook.com/BeyondtheTreesAvondale" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/beyondthetreesavondale" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
-				</div>  
-			</div><!-- End card deck x 3 -->
-	    
-			<div class="card-deck" style="padding: 0.5rem;">
+				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Lucky Fortune</b><br><i>(Chinese)</i></p>
 						<p class="card-text">13 Main Street, Rathdrum, Co. Wicklow, A67 KP08</p>
 						<p class="card-text"><a href="tel:+35340443354" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43354</p>
 					</div>
-				</div>  
-				<div class="card bg-dark text-white">
+				</div>
+			</div><!-- End card deck x 3 -->
+	    
+			<div class="card-deck" style="padding: 0.5rem;">
+  				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Pineto</b><br><i>(Takeaway &#38; Pizzeria)</i></p>
 						<p class="card-text">26 Main Street, Rathdrum, Co. Wicklow, A67 YF88</p>
@@ -374,10 +364,7 @@
 						<a href="https://www.mizzoni.ie/selectOrderType/rathdrum-menu" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/p/Mizzoni-pizza-Rathdrum-100057468848719/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>		 
-			</div> <!-- End card deck x 3 -->
-	 
-			<div class="card-deck" style="padding: 0.5rem;">
+				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Pit Stop Coffee</b></p>
@@ -386,7 +373,10 @@
 						<a href="https://www.facebook.com/profile.php?id=61560015267061" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/pitstopcoffee.ww/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
-				</div> 
+				</div> 				
+			</div> <!-- End card deck x 3 -->
+	 
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>D&#233;j&agrave; Brew</b><br><i>(Coffee &#38; Ice-cream)</i></p>
@@ -404,9 +394,6 @@
 						<a href="https://www.instagram.com/graze_away_irl/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
-	    </div>	<!-- End card deck x 3 -->
-	
-			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Nosso Conto</b><br><i>(Online Bakery)</i></p>
@@ -415,6 +402,9 @@
 						<a href="https://www.instagram.com/nossocontoltd" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+	    </div>	<!-- End card deck x 3 -->
+	
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Phelan Licensed Grocer</b><br><i>(Bar &#38; Groceries)</i></p>
@@ -432,10 +422,7 @@
 						<a href="https://www.botanicgardens.ie/kilmacurragh/acton-cafe/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/Theactoncafe/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>	 
-			</div>			
-  
-			<div class="card-deck" style="padding: 0.5rem;">
+				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>The Meetings</b><br><i>(Bar)</i></p>
@@ -445,7 +432,10 @@
 						<a href="http://www.themeetings.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/The.Meetings.Avoca" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>
+				</div>				
+			</div>			
+  
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Glenmalure Lodge</b><br><i>(Bar, Lounge &#38; Food)</i></p>
@@ -456,6 +446,8 @@
 						<a href="https://www.facebook.com/glenmalurelodge" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/glenmalurelodge" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
+				</div>
+				<div class="card border-0">
 				</div>
 				<div class="card border-0">
 				</div>
