--- a/dirRath.html
+++ b/dirRath.html
@@ -298,7 +298,7 @@
 				</div>		
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>The Coffin Shed Café</b><br><i>(Cafe &#38; Catering)</i></p>
+						<p class="card-text"><b>The Coffin Shed Café</b><br><i>(Café &#38; Catering)</i></p>
 						<p class="card-text">Market Street, Rathdrum, Co. Wicklow, A67 Y293</p>
 						<p class="card-text"><a href="tel:+353871961280" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 196 1280</p>
 						<a href="https://www.facebook.com/p/The-Coffin-Shed-Caf%C3%A9-100076444771456/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -415,7 +415,7 @@
 				</div>	  
 	      <div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Acton Cafe</b></p>
+						<p class="card-text"><b>Acton Café</b></p>
 						<p class="card-text">National Botanic Gardens - Kilmacurragh, Kilbride, Co. Wicklow, A67 YR12</p>
 						<p class="card-text"><a href="tel:+35340448842" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: (0404) 48842</p>
 						<a href="https://brambles.ie/cafes/national-botanic-gardens" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
